--- a/car-workshop/views/repair.xml
+++ b/car-workshop/views/repair.xml
@@ -114,6 +114,8 @@
                                 <field name="date_deadline"/>
                                 <field name="tag_ids" widget="many2many_tags"
                                        options="{'color_field': 'color', 'no_create_edit': True}"/>
+                                <field name="budget_resignation"/>
+                                <field name="collect_pieces"/>
                             </group>
                         </group>
                         <group>
