[FIX] Images, [ADD] repos

--- a/car-workshop/report/cw_admission_sheet_templates.xml
+++ b/car-workshop/report/cw_admission_sheet_templates.xml
@@ -7,23 +7,9 @@
             <t t-foreach="docs" t-as="o">
                 <t t-call="web.external_layout">
                     <div class="page">
-                        <h2>HOJA DE ADMISIÓN (Esta en Español, pasarlo a Inglés)</h2>
-                        <group>                        
-                            Orden de Reparación <span t-field="o.sale_order_id.id"/><br/>
-                            Fecha <span t-esc="context_timestamp(datetime.datetime.now()).strftime('%Y-%m-%d %H:%M')"/>
-                        </group>
-                        <group id="customer data">
-                            Cliente <span t-field="o.partner_id.name"/><br/>
-                            DNI <span t-field="o.partner_id.vat"/><br/>
-                            Dirección <span t-field="o.partner_id.street"/><br/>
-                            Telefono <span t-field="o.partner_id.phone"/>
-                            Móvil <span t-field="o.partner_id.mobile"/><br/>
-                        </group>
-                        <group id="vehicle_data">
-                            Vehiculo <span t-field="o.vehicle_id.name"/><br/>
-                            Matricula <span t-field="o.vehicle_id.license_plate"/><br/>
-                            Bastidor <span t-field="o.vehicle_id.vin_sn"/><br/>
-                        </group>
+                        <!--HEAD cw_head_templates.xml-->
+                        <h2>HOJA DE ADMISIÓN (Esta en Español)</h2>
+                        <t t-call="car-workshop.report_head_vehicle_customer" t-lang="doc.partner_id.lang"/>
                         <div id="repair data" colspan="2">
                             <div>
                                 <!--<img class="img img-responsive" src="/car-workshop/static/src/img/car_repair.jpg" style="width: 25%;"/>-->
@@ -65,11 +51,13 @@
             </t>
         </t>
     </template>
+
     <!--Admission Sheet Main Template-->
     <template id="report_admission_sheet">
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="doc">
-                <t t-call="car-workshop.report_admission_sheet_document" t-lang="doc.partner_id.lang"/></t>
+                <t t-call="car-workshop.report_admission_sheet_document" t-lang="doc.partner_id.lang"/>
+            </t>
         </t>
     </template>
 </odoo>
