--- a/car-workshop/report/cw_reports.xml
+++ b/car-workshop/report/cw_reports.xml
@@ -10,5 +10,14 @@
             name="car-workshop.report_admission_sheet"
             print_report_name="'Admission Sheet Report PRUEBAS'"
         />
+        <report
+            id="action_report_quotation"
+            string="Quotation"
+            model="car_workshop.repair"
+            report_type="qweb-pdf"
+            file="car-workshop.report_quotation"
+            name="car-workshop.report_quotation"
+            print_report_name="'Quotation Report PRUEBAS'"
+        />
     </data>
 </odoo>
