--- a/car-workshop/views/repair.xml
+++ b/car-workshop/views/repair.xml
@@ -19,26 +19,35 @@
                                 type="action" context="{'default_advance_payment_method': 'percentage'}"
                                 attrs="{'invisible': ['|',('invoice_status', '!=', 'no'), ('state', '!=', 'sale')]}"/>
 
-
+                        <!--Enviar el presupuesto por correo-->
                         <button name="action_quotation_send" string="Send by Email" type="object" states="draft"
                                 class="btn-primary"/>
+                        <button name="action_quotation_send" string="Send by Email" type="object" states="sent,sale"/>
+
+                        <!--Enviar el presupuesto "PRO-Forma" por correo-->
                         <button name="action_quotation_send" type="object" string="Send PRO-FORMA Invoice"
                                 groups="sale.group_proforma_sales" class="btn-primary"
                                 attrs="{'invisible': ['|', ('state', '!=', 'draft'), ('invoice_count','&gt;=',1)]}"
                                 context="{'proforma': True}"/>
-                        <button name="print_quotation" string="Print" type="object" states="draft"
-                                class="btn-primary o_sale_print"/>
-                        <button name="action_confirm" id="action_confirm" string="Confirm Sale" class="btn-primary"
-                                type="object" attrs="{'invisible': [('state', 'not in', ['sent'])]}"/>
-                        <button name="action_confirm" string="Confirm Sale" type="object"
-                                attrs="{'invisible': [('state', 'not in', ['draft'])]}"/>
                         <button name="action_quotation_send" type="object" string="Send PRO-FORMA Invoice"
                                 groups="sale.group_proforma_sales"
                                 attrs="{'invisible': ['|', ('state', '=', 'draft'), ('invoice_count','&gt;=',1)]}"
                                 context="{'proforma': True}"/>
+
+
+                        <!--Imprimir Presupuesto PDF-->
+                        <button name="print_quotation" string="Print" type="object" states="draft"
+                                class="btn-primary o_sale_print"/>
                         <button name="print_quotation" string="Print" type="object" states="sent,sale"
                                 class="o_sale_print"/>
-                        <button name="action_quotation_send" string="Send by Email" type="object" states="sent,sale"/>
+
+
+
+
+                        <button name="action_confirm" id="action_confirm" string="Confirm Sale" class="btn-primary"
+                                type="object" attrs="{'invisible': [('state', 'not in', ['sent'])]}"/>
+                        <button name="action_confirm" string="Confirm Sale" type="object"
+                                attrs="{'invisible': [('state', 'not in', ['draft'])]}"/>
                         <button name="action_cancel" states="draft,sent,sale" type="object" string="Cancel"/>
                         <button name="action_draft" states="cancel" type="object" string="Set to Quotation"/>
                         <button name="action_done" type="object" string="Lock" states="sale"
