--- a/tire-catalog/views/tire_brand.xml
+++ b/tire-catalog/views/tire_brand.xml
@@ -10,7 +10,7 @@
                     <sheet>
                         <group>
                             <div>
-                                <field name="image_medium" widget="image" class="oe_avatar"/>
+                                <field name="image" widget="image" class="oe_avatar"/>
                                 <label for="name" class="oe_edit_only"/>
                                 <h1>
                                     <field name="name"/>
@@ -34,7 +34,8 @@
                     <t t-name="kanban-box">
                         <div class="oe_kanban_vignette oe_semantic_html_override">
                             <a type="open" href="#" class="o_kanban_image oe_kanban_action">
-                                <img t-att-src="kanban_image('tire-catalog.tire_brand', 'image_small', record.id.raw_value)" class="img-responsive" style="width:100px;"/>
+                                <img t-att-src="kanban_image('tire_catalog.tire_brand', 'image', record.id.raw_value)" class="img-responsive" style="width:100px;"/>
+                                 <!--<img t-att-src="kanban_image('tire_catalog.tire_brand', 'image', record.id.raw_value)" class="oe_kanban_picture" style="max-height: 90px; max-width: 60px;"/>-->
                             </a>
                             <div class="oe_kanban_details">
                                 <h4 class="oe_partner_heading">
@@ -49,6 +50,7 @@
             </kanban>
             </field>
         </record>
+
 
 
         <!-- Tire Brand Action-->
