--- a/car-workshop/views/inherit_project_project.xml
+++ b/car-workshop/views/inherit_project_project.xml
@@ -32,7 +32,7 @@
             <field name="name">Repairs</field>
             <field name="res_model">car_workshop.repair</field>
             <field name="view_mode">kanban,form,calendar,tree</field>
-            <field name="kanban_view_id" ref="car-workshop_repair_view_kanban"/>
+            <!--<field name="kanban_view_id" ref="car-workshop_repair_view_kanban"/>-->
             <field name="context">{
                 'group_by': 'stage_id',
                 'search_default_project_id': [active_id],
