--- a/car-workshop/wizards/inherit_sale_make_invoice_advance_views.xml
+++ b/car-workshop/wizards/inherit_sale_make_invoice_advance_views.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-
+        <!--Al exportar el archivo es.po del módulo car-workshop, no se refleja este formulario en el poedit-->
+        <!--Y por tanto no lo traduce. Lo he solucionado exportanto el es.po de los modulos car-workshop y sale juntos. -->
         <record id="view_sale_advance_payment_inv_for_carworkshop" model="ir.ui.view">
             <field name="name">Invoice Orders</field>
             <field name="model">car_workshop.advance.payment.inv</field>
