--- a/car-workshop/report/cw_head_templates.xml
+++ b/car-workshop/report/cw_head_templates.xml
@@ -3,76 +3,34 @@
     <data>
         <!--Translatable Head Vechicle and Customer Template-->
         <template id="report_head_vehicle_customer">
-            <t t-foreach="docs" t-as="o">
-                <div>
-                    <p>ORDEN DE REPARACIÓN
-                        <span t-field="o.id"/>
-                        <br/>
-                        FECHA
-                        <span t-esc="context_timestamp(datetime.datetime.now()).strftime('%d/%m/%Y %H:%M')"/>
-                    </p>
-                </div>
-                    <div class="oe_row">
-                        <table class="col-xs-6">
-                            <tr>
-                                <td>VEHÍCULO</td>
-                                <td>
-                                    <span t-field="o.vehicle_id.name"/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>MATRÍCULA</td>
-                                <td>
-                                    <span t-field="o.vehicle_id.license_plate"/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>BASTIDOR</td>
-                                <td>
-                                    <span t-field="o.vehicle_id.vin_sn"/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>KM</td>
-                                <td>
-                                    <span t-field="o.vehicle_id.odometer"/>
-                                </td>
-                            </tr>
-                        </table>
-                        <table class="col-xs-6">
-                            <tr>
-                                <td>CLIENTE</td>
-                                <td>
-                                    <span t-field="o.partner_id.name"/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>DNI</td>
-                                <td>
-                                    <span t-field="o.partner_id.vat"/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>DIRECCIÓN</td>
-                                <td>
-                                    <span t-field="o.partner_id.street"/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>TELÉFONO</td>
-                                <td>
-                                    <span t-field="o.partner_id.phone"/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>MÓVIL</td>
-                                <td>
-                                    <span t-field="o.partner_id.mobile"/>
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-            </t>
+           <div class="oe_structure"/>
+                        <div class="row">
+                            <div class="col-xs-5 col-xs-offset-1">
+                                <!--<div t-field="doc.vehicle_id"/>-->
+                                <p>
+                                    <span t-field="doc.vehicle_id.model_id.brand_id"/>
+                                    <span t-field="doc.vehicle_id.model_id.name"/><br/>
+                                    <span t-field="doc.vehicle_id.license_plate"/><br/>
+                                    BASTIDOR:
+                                    <span t-field="doc.vehicle_id.vin_sn"/><br/>
+                                    KM:
+                                    <span t-field="doc.vehicle_id.odometer"/>
+                                </p>
+                            </div>
+                            <div class="col-xs-5 col-xs-offset-1"
+                                 t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}'/>
+                            <div t-field="doc.partner_id"
+                                 t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}'/>
+                            <p t-if="doc.partner_id.vat">DNI:
+                                <span t-field="doc.partner_id.vat"/>
+                            </p>
+                            <p t-if="doc.partner_id.mobile">
+                                <span t-field="doc.partner_id.mobile"/>
+                            </p>
+                            <p t-if="doc.partner_id.phone">
+                                <span t-field="doc.partner_id.phone"/>
+                            </p>
+                        </div>
         </template>
     </data>
 </odoo>
