--- a/car-workshop/report/cw_reports.xml
+++ b/car-workshop/report/cw_reports.xml
@@ -18,7 +18,7 @@
             report_type="qweb-pdf"
             file="car-workshop.report_quotation"
             name="car-workshop.report_quotation"
-            print_report_name="'Quotation Report PRUEBAS'"
+            print_report_name="'Presupuesto - %s' % (object.name)"
         />
     </data>
 </odoo>
