--- a/car-workshop/report/cw_reports.xml
+++ b/car-workshop/report/cw_reports.xml
@@ -10,7 +10,6 @@
             name="car-workshop.report_admission_sheet"
             print_report_name="'Hoja de Admisión - %s' % (object.name)"
         />
-        <!--Cambiar por qweb-pdf arriba-->
         <report
             id="action_report_quotation"
             string="Quotation"
@@ -19,6 +18,15 @@
             file="car-workshop.report_quotation"
             name="car-workshop.report_quotation"
             print_report_name="'Presupuesto - %s' % (object.name)"
+        />
+        <report
+            id="cw_action_report_invoice"
+            string="Factura Taller"
+            model="account.invoice"
+            report_type="qweb-pdf"
+            file="car-workshop.cw_report_invoice"
+            name="car-workshop.cw_report_invoice"
+            print_report_name="'Factura - %s' % (object.name)"
         />
     </data>
 </odoo>
