--- a/car-workshop/report/cw_head_templates.xml
+++ b/car-workshop/report/cw_head_templates.xml
@@ -3,7 +3,7 @@
     <data>
         <!--Translatable Head Vechicle and Customer Template-->
         <template id="report_head_vehicle_customer">
-           <div class="oe_structure"/>
+                        <div class="oe_structure"/>
                         <div class="row">
                             <div class="col-xs-5 col-xs-offset-1">
                                 <!--<div t-field="doc.vehicle_id"/>-->
@@ -17,18 +17,20 @@
                                     <span t-field="doc.vehicle_id.odometer"/>
                                 </p>
                             </div>
-                            <div class="col-xs-5 col-xs-offset-1"
-                                 t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}'/>
-                            <div t-field="doc.partner_id"
-                                 t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}'/>
-                            <p t-if="doc.partner_id.vat">DNI:
-                                <span t-field="doc.partner_id.vat"/>
-                                <t t-if="doc.partner_id.phone">
-                                        <br/><span t-field="doc.partner_id.phone"/>
-                                </t>
-                            </p>
+                            <div class="col-xs-5 col-xs-offset-1">
+                                <p>
+                                    <span t-field="doc.partner_id.name"/><br/>
+                                    <span t-field="doc.partner_id.vat"/><br/>
+                                    <t t-if="doc.partner_id.street"><span t-field="doc.partner_id.street"/><br/></t>
+                                    <t t-if="doc.partner_id.city"><span t-field="doc.partner_id.city"/><br/></t>
+                                    <t t-if="doc.partner_id.state_id"><span t-field="doc.partner_id.state_id"/></t>
+                                    <t t-if="doc.partner_id.zip"><span t-field="doc.partner_id.zip"/></t>
+                                    <t t-if="doc.partner_id.mobile"><br/><span t-field="doc.partner_id.mobile"/><br/></t>
+                                    <t t-if="doc.partner_id.phone"><br/><span t-field="doc.partner_id.phone"/><br/></t>
+
+                                </p>
+                            </div>
                         </div>
-                        <br/>
         </template>
     </data>
 </odoo>
